--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -2,6 +2,7 @@
 @{ ViewData["Title"] = "Edit";
     bool nmap = Model.NMAP != null;
     bool nessus = Model.NESSUS != null;
+    bool dnsrecon = Model.DNSRECON != null;
 }
 
 
@@ -12,6 +13,7 @@
         <h2>Modifica modulo @(Model.NMAP.Nome)</h2>
         <hr />
         <form asp-action="Edit" name="nmapForm">
+            <input type="hidden" asp-for="@Model.NMAP.Applicazione" value="@webmva.Models.APPLICAZIONE.NMAP" />
             <div class="row panel panel-default panel-body">
 
                 <div class="col-sm-12">
@@ -202,6 +204,7 @@
                 </div>
             </div>
         </form>
+        <a asp-action="Index"> Torna alla lista</a>
     }
     @* -----NESSUS----- *@
     else if (nessus)
@@ -209,5 +212,113 @@
         <h2>Modifica modulo @(Model.NESSUS.Nome)</h2>
         <hr />
         <a asp-action="Index"> Torna alla lista</a>
+    }
+    @* -----DNSRECON----- *@
+    else if (dnsrecon)
+    {
+        <h2>Modifica modulo @(Model.DNSRECON.Nome)</h2>
+        <hr />
+        <form asp-action="Edit" name="dnsReconForm">
+            <input type="hidden" asp-for="@Model.DNSRECON.Applicazione" value="@webmva.Models.APPLICAZIONE.DNSRECON" />
+            <div class="row panel panel-default panel-body">
+
+                <div class="col-sm-12">
+                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                        <div class="form-group">
+                            <h4 asp-for="@(Model.DNSRECON.Nome)">Nome Modulo</h4>
+                            <input class="form-control" asp-for="@(Model.DNSRECON.Nome)" />
+                        </div>
+                    </div>
+                    <input type="hidden" asp-for="@Model.DNSRECON.ID" />
+                    <hr />
+                    <div class="col-sm-12">
+                        <div class="col-sm-7" style="margin:0 auto; float:none">
+                            <div class="form-group row">
+                                <div class="col-sm-3">
+                                    <label class="control-label" asp-for="@Model.DNSRECON.Dominio"></label>
+                                </div>
+                                <input class="col-sm-9" asp-for="@Model.DNSRECON.Dominio" />
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-3">
+                                    <label class="control-label" asp-for="@Model.DNSRECON.NameServer"></label>
+                                </div>
+                                <input class="col-sm-9" asp-for="@Model.DNSRECON.NameServer" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <h4>Tipi di enumerazione</h4>
+                        <hr />
+                        <div class="col-sm-6">
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.AXFREnum" />
+                                        AXFR Enumeration (-a)
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.ReverseLookupEnum" />
+                                        Reverse Lookup Enumeration (-s)
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.GoogleEnum" />
+                                        Google Enumeration (-g)
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.BingEnum" />
+                                        Bing (-b)
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.CrtShEnum" />
+                                        Crt.sh Enumeration (-k)
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.DeepWhois" />
+                                        Deep Whois (-w)
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label class="control-label">
+                                        <input type="checkbox" asp-for="@Model.DNSRECON.ZoneWalk" />
+                                        DNSSEC Zone Walk (-z)
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-sm-offset-6 text-right">
+                            <div class="form-group">
+                                <input type="submit" asp-action="Edit" class="btn btn-default" asp-route-id="@Model.DNSRECON.ID" value="Salva" />&nbsp;|&nbsp;
+                                <a asp-action="Index"> Torna alla lista</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     }
 }
