Infoga prima bozza

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -95,7 +95,7 @@
                                                 <a href="#" data-toggle="collapse" data-target="#droopescan">DROOPE <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
-                                                <a href="" target="_blank">RIspettiva sitografia</a>
+                                                <a href="https://github.com/The404Hacking/Infoga/blob/master/Screenshot.png" target="_blank">Rispettiva sitografia</a>
                                             </li>
                                             <li>
                                                 <a href="#" data-toggle="collapse" data-target="#">VEDI <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
