--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -94,7 +94,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
                                            
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#CMSmap">CMSmap <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a> 
+                                                <a href="#" data-toggle="collapse" data-target="#droopescan">DroopeScan <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a> 
                                             </li>
                                             <li>
                                                 <a href="" target="_blank">RIspettiva sitografia</a>
@@ -129,6 +129,34 @@
                                             </li>
                                             <li>
                                                 <a href="#" data-toggle="collapse" data-target="#">VEDI <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                            </li>
+                                            <li>
+                                                <a href="#" data-toggle="collapse" data-target="#">VEDI  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                            </li>
+                                        </ul>
+
+                                    </div>
+                                </div>
+                                </li>
+                                <li class="nav navbar-nav" id="dropdown">
+                              <a>
+                                  <span class="glyphicon glyphicon-list-alt"></span>
+                                  <strong> INFORMATION GATHERING</strong>
+                              </a>
+                                <!-- Dropdown level 1-->
+                                <div id="database" class="nav-item dropdown">
+                                    <div class="dropdown">
+        
+                                        <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
+                                           
+                                            <li>
+                                                <a href="#" data-toggle="collapse" data-target="#ig"> Infoga <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a> 
+                                            </li>
+                                            <li>
+                                                <a href="" target="_blank">RISPETTIVA SITOGRAFIA</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" data-toggle="collapse" data-target="#">VEDI  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="#" data-toggle="collapse" data-target="#">VEDI  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
@@ -363,6 +391,90 @@
         </div>
          <div class="panel panel-default">
                     <div class="panel-heading">
+                        <a href="#cms" data-toggle="collapse">
+                            <strong>
+                               CMS
+                            </strong>
+                           
+                        </a>
+                    </div>
+            <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a href="#" data-toggle="collapse" data-target="#droopescan">
+                            <strong>
+                                 DROOPE
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="droopescan">
+                        <div class="panel-body ">
+
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
+
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    @foreach (var item in Model.ModuliDROOPE) { 
+                                    <tr>
+                                        <td>
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5">
+                    <div class="panel panel-sidebar">
+                        <div class="panel-heading">
+                            <a href="#" data-toggle="collapse" data-target="#vedi">
+                                <strong>
+                                  vedi1
+                                </strong>
+                                <span class="caret"></span>
+                            </a>
+                        </div>
+                        <div class="collapse " id="vedi">
+                            <div class="panel-body ">
+    
+                                <table class="table" >
+                                    <div class="method">
+                                      
+                                </table>
+    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+
+        </div>
+         <div class="panel panel-default">
+                    <div class="panel-heading">
                         <a href="#dns" data-toggle="collapse">
                             <strong>
                                DNS
@@ -466,7 +578,90 @@
                     </div>
 
         </div>
-        
+         <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="#ig" data-toggle="collapse">
+                            <strong>
+                               INFORMATION GATHERING
+                            </strong>
+                           
+                        </a>
+                    </div>
+            <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a href="#" data-toggle="collapse" data-target="#infoga">
+                            <strong>
+                                 INFOGA
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="infoga">
+                        <div class="panel-body ">
+
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
+
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    @foreach (var item in Model.ModuliINFOGA) { 
+                                    <tr>
+                                        <td>
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5">
+                    <div class="panel panel-sidebar">
+                        <div class="panel-heading">
+                            <a href="#" data-toggle="collapse" data-target="#vedi">
+                                <strong>
+                                  vedi1
+                                </strong>
+                                <span class="caret"></span>
+                            </a>
+                        </div>
+                        <div class="collapse " id="vedi">
+                            <div class="panel-body ">
+    
+                                <table class="table" >
+                                    <div class="method">
+                                      
+                                </table>
+    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+
+        </div>
         </div>
        
     </div>
