--- a/Views/Report/Index.cshtml
+++ b/Views/Report/Index.cshtml
@@ -4,14 +4,49 @@
     <div class="container">
         <h2>Report</h2>
         <p class="lead">
-            Per importare un report <a >clicca qui</a> !
+            Per importare un report <a href="/Report/Import">clicca qui</a> !
         </p>
         <hr/>
-        <div class="panel panel-default col-lg-10">
-           
-                <div class="method">
-                   
-                </div>
+     
                 
+        </div>
+        <div class="panel panel-default col-lg-10 col-md-offset-1">
+            <table class="table">
+                <div class="method">
+                    <thead>
+                        <tr>
+                            <th>
+                             Nome Progetto
+                            </th>
+                            <th>
+                                Scan avvenuto
+                            </th>
+                            <th> 
+                            </th>
+                            
+                            <th></th>
+                        </tr>
+                    </thead>
+                </div>
+                <tbody>
+                   
+                        <tr>
+                            <td>
+                               
+                            <td>
+                               
+                            </td>
+                            <td>
+                                <div class="col-sm-10 col-sm-offset-3">
+                                    <a asp-action="Edit" >Scarica formato XML</a> |
+                                   
+                                     <a asp-action="Edit" >Importa scan</a>
+                                </div>
+                            </td>
+
+                        </tr>
+                    
+                </tbody>
+            </table>
         </div>
     </div>
